# mgnr.desktop

./: .gitmodules  README.md
src/: CMakeLists.txt  config.lua
src/mgenner/: editTable.cpp  editTable.h  midiLoader.cpp  midiMap.cpp  midiMap.h  midisplit.cpp  note.h  offline.cpp  offline.h  offline_freqbuilder.h  player.cpp  player.h  sampler.h  stringPool.h  synth.cpp  synth.h  synthOutput.cpp
src/modules/: CMakeLists.txt
src/modules/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.lua
src/spectrum/: full.h  renderer.h  step.h
src/synth/: simple.h  vinstrument.h
src/synthesizer/: dataBlock.h  effector.cpp  effector.h  streamPlayer.h  synthesizer.cpp  synthesizer.h  vinstrument.cpp  vinstrument.h
src/synthesizer/module/: fluidsynth.cpp  fluidsynth.h  sf2.cpp  sf2.h
src/sysmodule/: cepstrum.h  fileselector.h  loadToWindow.h  midiloader.h  print.h  spectrum.h  spectrumViewer.h  wavFrameSampler.h  wavloader.h
src/sysmodule/types/: midifile.h  wavfile.cpp  wavfile.h
src/utils/: AudioFile.h  WavFile.cpp  WavFile.h  freq.hpp  gpu.hpp  imfilebrowser.h  kalman.hpp  waveWindow.h
src/view/: editWindow.cpp  editWindow.h  events.cpp  luacall.h  main.cpp  mgenner.h  midiEditor.cpp  module.cpp  offlineRender.cpp  offlineRender.h  plugin.cpp  renderContext.cpp  renderContext.h  synth.cpp  synthConfig.cpp  ui.cpp  vscript.cpp
src/vscript/: vscript.cpp  vscript.h  vscript_ui.cpp  vscript_ui.h
